# CondEncCCS24Artifact

./: .gitignore  .gitignore.swp  CMakeLists.txt  PlotFigure.py  README.md  TestScript.py  TestScript.sh
CondEncCPP/: CMakeLists.txt  CondEncCPPconfig.h.in  FixingTestInstallCryptoPP.sh  PdfGenTable1.py  PlotFigure.py  TestScript.sh  TestScriptMakingTable1data.sh  helpTest.txt
CondEncCPP/GeneratePlotsPdfs/: Generatepdf.sh  MissingProofs.tex  OR-ANDComposition.tex  acmart.cls  main.aux  main.out  prot.sty
CondEncCPP/PWDvsTyposDataSet/: PWDvsTypoDataSetLessThan16HamDisNotHold3.txt  PWDvsTypoDataSetLessThan32.txt  PWDvsTypoDataSetLessThan32HamDis.txt  PWDvsTypoDataSetLessThan32HamDisHold1.txt  PWDvsTypoDataSetLessThan32HamDisHold2.txt  PWDvsTypoDataSetLessThan32HamDisHold4.txt
CondEncCPP/ShamirSS/src/: shamir.cpp
CondEncCPP/cryptopp-cmake/cryptopp/: CMakeLists.txt
CondEncCPP/paillier/: paillierc1.c  paillierc11.h
CondEncCPP/paillier/both and cpp/: pailliercpp.cpp
CondEncCPP/paillier/untitled folder/: pailliercpp.cpp  pailliercpp.h
CondEncCPP/src/: ConditionalEncryptionCAPSLOCK.cpp  ConditionalEncryptionEditDistOne.cpp  ConditionalEncryptionEditDistOne.h  ConditionalEncryptionHamDistAtmostT.cpp  ConditionalEncryptionHamDistAtmostT.h  ConditionalEncryptionOR.cpp  CryptoSymWrapperFunctions.cpp  PK_crypto.cpp  PaillierWrapperFunctions.cpp  PaillierWrapperFunctions.h
CondEncCPP/test/: .testCondEncEvaluation.h.swp  CMakeLists.txt  testCondEncEvaluation.cpp  testCondEncEvaluation.h  test_install.cpp
CondEncCPP/test/PWDvsTyposDataSet/: PWDvsTypoDataSetLessThan128HamDisNotHold1.txt  PWDvsTypoDataSetLessThan128HamDisNotHold2.txt  PWDvsTypoDataSetLessThan128HamDisNotHold3.txt  PWDvsTypoDataSetLessThan64HamDisNotHold4.txt  PWDvsTypoDataSetLessThan8.txt
CondTypTopCPP/: .typtop.uniq.id  CMakeLists.txt  PlotFigureCondTypTop.py  TestScript.sh  condtyptopconfig.h.in  test_typtop_db
CondTypTopCPP/PWDvsTyposDataSet/: PWDvsTypoDataSetLessThan128.txt  PWDvsTypoDataSetLessThan16ORNotHold.txt  PWDvsTypoDataSetLessThan32HamDisHold3.txt  PWDvsTypoDataSetLessThan8HamDisNotHold1.txt  PWDvsTypoDataSetLessThan8HamDisNotHold3.txt
CondTypTopCPP/argon2/phcargon2/libargon2.1.dylib.dSYM/Contents/Resources/DWARF/: libargon2.1.dylib
CondTypTopCPP/install/: CMakeLists.txt  CPackConfig.cmake  postinst  postinstall_osx.in
CondTypTopCPP/paillier/: pailliercpp.h
CondTypTopCPP/paillier/both and cpp/: pailliercpp.h
CondTypTopCPP/src/: CMakeLists.txt  ConditionalEncryptionCAPSLOCK.cpp  ConditionalEncryptionEditDistOne.cpp  ConditionalEncryptionEditDistOne.h  ConditionalEncryptionHamDistAtmostT.cpp  ConditionalEncryptionOR.cpp  CryptoSymWrapperFunctions.cpp  CryptoSymWrapperFunctions.h  PK_crypto.h  b64.cpp  conditionalcrypto.h  condtyptop.cpp  condtyptop.h  db.proto  main.cpp  pw_crypto.cpp  pw_crypto.h  typo_util.hpp  typtop-main.cpp  upload.cpp
CondTypTopCPP/src/pam_modules/: CMakeLists.txt  condtyptop-auth.in  pam_condtyptop.cpp  pam_opendirectory_condtyptop.c
CondTypTopCPP/test/: CMakeLists.txt  catch.hpp  test-main.cpp  testCondEncEvaluation.cpp  testCondEncEvaluation.h  test_EvaluateCondTypTop.cpp  test_condTypTop.cpp  test_condTypTop.h  test_install.cpp  test_pw_crypto.cpp  test_typtop.cpp
GeneratePlotsPdfs/: 1.tikzstyles  ArtifactAppendix.tex  CondEncPerfEval(old).tex  CondEncPerfEval.tex  abstract.tex  ccs-construction.tex  ccs-preamble.tex  extra.bib  implementation.tex  main.tex  preamble.tex  prelims.tex
GeneratePlotsPdfs/ArtifactACMCCS24/: CondEncPerfEval.tex
PWDvsTyposDataSet/: PWDvsTypoDataSetLessThan16.txt  PWDvsTypoDataSetLessThan16HamDisNotHold1.txt  PWDvsTypoDataSetLessThan16HamDisNotHold2.txt  PWDvsTypoDataSetLessThan16HamDisNotHold4.txt  PWDvsTypoDataSetLessThan64ORNotHold.txt  PWDvsTypoDataSetLessThan8HamDisNotHold2.txt  PWDvsTypoDataSetLessThan8ORNotHold.txt
ShamirSS/src/: GF256.cpp
argon2/phcargon2/genkat.dSYM/Contents/: Info.plist
paillier/: pailliercpp.cpp
src/: CMakeLists.txt  ConditionalEncryptionCAPSLOCK.cpp  ConditionalEncryptionCAPSLOCK.h  ConditionalEncryptionEditDistOne.cpp  ConditionalEncryptionEditDistOne.h  ConditionalEncryptionHamDistAtmostT.cpp  ConditionalEncryptionHamDistAtmostT.h  ConditionalEncryptionHamDistTwo.cpp  ConditionalEncryptionHamDistTwo.h  ConditionalEncryptionOR.cpp  ConditionalEncryptionOR.h  CryptoSymWrapperFunctions.cpp  CryptoSymWrapperFunctions.h  db.proto  main.cpp
src/pam_modules/: CMakeLists.txt
test/: CMakeLists.txt  catch.hpp  testCondEncEvaluation.cpp  testCondEncEvaluation.h
test/PWDvsTyposDataSet/: PWDvsTypoDataSet.txt  PWDvsTypoDataSetLessThan8HamDisNotHold4.txt
typtopcpp/: CMakeLists.txt  CMakeLists.txt1
typtopcpp/argon2/phcargon2/: argon2  libargon2.1.dylib  libargon2.so.1
typtopcpp/cryptopp-cmake/cryptopp/: CMakeLists.txt
typtopcpp/src/: CMakeLists.txt  pw_crypto.cpp  pw_crypto.h  typtop.cpp  typtop.h
typtopcpp/test/: CMakeLists.txt  catch.hpp  test_CompareWithCondEnc.cpp  test_typtop.cpp
